frontend/test/should_fail/map_002.grg
using map_model_001;

rule wrongKeyType {
	a:A;
	
	modify {
		eval {
			a.stringValue = a.intToString[a.stringValue];
		}
	}
}